more functions and includes

--- a/server.cfg
+++ b/server.cfg
@@ -4,7 +4,7 @@ rcon_password temp
 maxplayers 32
 port 7777
 hostname Test Server
-gamemode0 script
+gamemode0 IRR
 filterscripts attachments
 announce 0
 query 1
